# PEAR-Tool

./: README.md
analysis/: crown_manipulation.py  fix_size.py  fourier_transform.py  fourier_transform_exp.py  pyproject.toml  stl_centreline_functions.py  stl_manipulation_v5.py  stl_manipulation_v6.py  stl_manipulation_v7.py  stl_scale_functions.py  transformations_v3.csv  visualise_mesh.py
analysis/archive/: stl_manipulation.py  stl_manipulation_v2.py  stl_manipulation_v3.py  stl_manipulation_v4.py  stl_smooth.py  stl_smooth_laplacian_testing.py  stl_smooth_simple.py  stl_smooth_taubin.py
analysis/data/: CT_2_1_A.stl  CT_2_1_As.stl  scaled_CT_2_1_As.stl
analysis/manufacturing/: angle_guide.csv  angle_guide_v10.csv  angle_guide_v3.csv  angle_guide_v4.csv  angle_guide_v8.csv  angle_guide_v9.csv  jig_manufacture_plan.ipynb
analysis/outputs/V1/: fourier_transform_5Peaks_1000Points.csv  fourier_transform_5Peaks_1000Points_edited.csv  fourier_transform_5Peaks_300Points_divide10.csv  fourier_transform_5Peaks_300Points_wierd_Diameter.csv
analysis/outputs/V10/: CT_2_1_A_scaled_m1-5_1.0_v6.stl  CT_2_1_A_scaled_m1-5_1.45_v6.stl  CT_2_1_As_scaled_m1-5_1.0_v6.stl  CT_2_1_As_scaled_m1-5_1.45_v6.stl
analysis/outputs/V2/: fourier_transform_25mm.csv  fourier_transform_28mm.csv  fourier_transform_32mm.csv
analysis/outputs/V3/: CT_2_1_A_scaled.stl  centerline.txt
analysis/outputs/V4/: CT_2_1_A_correct_sized_scaled.stl  centerline.csv
analysis/outputs/V5/: CT_2_1_A_correct_sized.stl  CT_2_1_A_correct_sized_scaled_1.25.stl  CT_2_1_A_correct_sized_scaled_1.4.stl  (+4 more)
(+58 files in other folders)
