[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["fidhalkotta <fidhalkotta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
